fix: vertically align poster with description

--- a/client/src/pages/game/game.scss
+++ b/client/src/pages/game/game.scss
@@ -57,6 +57,7 @@ body {
         gap: 20px;
         display: flex;
         flex-direction: row;
+        align-items: center;
 
         .left {
           margin-top: 0;
